# version_it

./: .gitignore  CMakeLists.txt  add_version_info.sh  main.cpp  version_info.h  version_info.template
